[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper"] }
axum = "0.7.7"
axum-extra = { version = "0.9.1", features = ["cookie-private"] }
axum-macros = "0.4.2"
bcrypt = "0.15.1"
http = "1.0.0"
lettre = "0.11.9"
rand = "0.8.5"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["time","chrono"] }
time = { version = "0.3.36", features = ["serde"] }
tokio = "1.40.0"
tower = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
fastrand = "2.1.1"
base64 = "0.22.1"
infer = "0.16.0"
uuid = { version = "1.11.0", features = ["v4"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
